commit semua data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Pembayaran Iuran Kebersihan</string>
+    <string name="app_name">Iuran Kebersihan</string>
     <string name="app_name2">Aplikasi Pembayaran Iuran Kebersihan</string>
     <string name="login">Login</string>
     <string name="daftar">Daftar Akun</string>
